--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "femto-log",
-  "version": "1.0.3",
+  "name": "maambmb-json-log",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js"
 }
